<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/str_first_name"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/str_last_name"
        android:textColor="@color/black"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintWidth_percent=".8"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName" />


    <EditText
        android:id="@+id/signupPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/str_email"
        android:inputType="textPassword"
        android:textColor="@color/black"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintWidth_percent=".8"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />


    <EditText
        android:id="@+id/signupConfirmPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/str_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintWidth_percent=".8"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPass" />


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_register"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_bg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintWidth_percent=".8" />



</androidx.constraintlayout.widget.ConstraintLayout>